# xrun

./: .clang-format  .gitignore  .gitmodules  Makefile.am  config.h.in  config.h.in~  configure.ac
debug/: xrunc.gdb
include/lib/: json.h  list.h  path.h  string.h  time.h  utils.h
include/tracer/: calls.h  checker.h  files.h  option.h  process.h  result.h  runner.h  time.h  tracer.h  tracerimpl.h
include/tracer/calls/arm/: calls.h
include/tracer/calls/x86/: calls.h
include/tracer/checkers/: file_checker.h  fork_checker.h  io_checker.h  resource_checker.h  syscall_checker.h  thread_checker.h
include/tracer/ptrace/: tracer.h
include/tracer/tracers/ptrace/: tracer.h
include/tracer/utils/: json.h  path.h  string.h  utils.h
include/xrun/: calls.h  checker.h  checkers.h  config.h  entry.h  file_limit.h  files.h  option.h  process.h  result.h  tracer.h
include/xrun/calls/: .gitignore
include/xrun/calls/arm/: calls.h
include/xrun/calls/x86/: calls.h
include/xrun/checkers/: file_checker.h  fork_checker.h  io_checker.h  resource_checker.h  syscall_checker.h
include/xrun/tracers/ptrace/: elf.h  tracer.h
include/xrun/utils/: error.h  json.h  list.h  path.h  string.h  utils.h
include/xrunc/: access.h  config.h  file_limit.h  option.h  version.h
sample/xrun/: config.json
src/: Makefile.am
src/lib/: json.c  list.c
src/tracer/: process.c  tracer.c
src/tracer/checker/: file_checker.c  fork_checker.c  resource_checker.c  syscall_checker.c
src/tracer/tracers/: ptrace_tracer.c
src/tracer/tracers/ptrace/: tracer.c
src/tracer/utils/: json.c  list.c
src/xrun/: Makefile.am  config.c  entry.c  file_limit.c  option.c  process.c  tracer.c  xrun.c
src/xrun/calls/: .gitignore
src/xrun/checker/: file_checker.c  fork_checker.c  resource_checker.c  syscall_checker.c
src/xrun/checkers/: Makefile.am  file_checker.c  fork_checker.c  io_checker.c  resource_checker.c  syscall_checker.c
src/xrun/tracers/: Makefile.am
src/xrun/tracers/ptrace/: tracer.c
src/xrun/tracers/ptrace/arch/: ptrace_arm.c  ptrace_x86.c
src/xrun/tracers/ptrace/arch/arm/: ptrace.c
src/xrun/tracers/ptrace/arm/: ptrace.c
src/xrun/tracers/ptrace/x86/: ptrace.c
src/xrun/utils/: json.c  list.c
src/xrunc/: Makefile.am  access.c  config.c  file_limit.c  option.c  xrun.c
tools/arm/: Makefile.am  mkhdr.sh  mksrc.sh
tools/x86/: Makefile.am  mkcalls.sh  mkhdr.sh  mksrc.sh
